--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "vue-turbolinks": "^2.2.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
